--- a/Parrot/AndroidManifest.xml
+++ b/Parrot/AndroidManifest.xml
@@ -2,7 +2,10 @@
     package="cengallut.parrotius"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
@@ -13,7 +16,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".ParrotMain"
-            android:label="@string/title_activity_parrot_main" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
